testdata/baselines/reference/submodule/conformance/assertionsAndNonReturningFunctions.errors.txt
assertionsAndNonReturningFunctions.js(1,22): error TS8010: Type annotations can only be used in TypeScript files.
assertionsAndNonReturningFunctions.js(3,12): error TS8010: Type annotations can only be used in TypeScript files.
assertionsAndNonReturningFunctions.js(14,12): error TS8010: Type annotations can only be used in TypeScript files.
assertionsAndNonReturningFunctions.js(15,14): error TS8010: Type annotations can only be used in TypeScript files.
assertionsAndNonReturningFunctions.js(22,14): error TS8010: Type annotations can only be used in TypeScript files.
assertionsAndNonReturningFunctions.js(29,12): error TS8010: Type annotations can only be used in TypeScript files.
assertionsAndNonReturningFunctions.js(46,9): error TS7027: Unreachable code detected.
assertionsAndNonReturningFunctions.js(51,12): error TS8010: Type annotations can only be used in TypeScript files.
assertionsAndNonReturningFunctions.js(58,5): error TS7027: Unreachable code detected.


==== assertionsAndNonReturningFunctions.js (9 errors) ====
    /** @typedef {(check: boolean) => asserts check} AssertFunc */
                         ~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    
    /** @type {AssertFunc} */
               ~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    const assert = check => {
        if (!check) throw new Error();
    }
    
    /** @type {(x: unknown) => asserts x is string } */
    function assertIsString(x) {
        if (!(typeof x === "string")) throw new Error();
    }
    
    /**
     * @param {boolean} check
               ~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     * @returns {asserts check}
                 ~~~~~~~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    */
    function assert2(check) {
        if (!check) throw new Error();
    }
    
    /**
     * @returns {never}
                 ~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function fail() {
        throw new Error();
    }
    
    /**
     * @param {*} x 
               ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function f1(x) {
        if (!!true) {
            assert(typeof x === "string");
            x.length;
        }
        if (!!true) {
            assert2(typeof x === "string");
            x.length;
        }
        if (!!true) {
            assertIsString(x);
            x.length;
        }
        if (!!true) {
            fail();
            x;  // Unreachable
            ~~
!!! error TS7027: Unreachable code detected.
        }
    }
    
    /**
     * @param {boolean} b 
               ~~~~~~~
!!! error TS8010: Type annotations can only be used in TypeScript files.
     */
    function f2(b) {
        switch (b) {
            case true: return 1;
            case false: return 0;
        }
        b;  // Unreachable
        ~~
!!! error TS7027: Unreachable code detected.
    }
    